[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/Visuals/sprites/supercharge_10.png" type="Texture" id=1]
[ext_resource path="res://Objects/Visuals/sprites/supercharge_9.png" type="Texture" id=2]
[ext_resource path="res://Objects/Visuals/sprites/supercharge_4.png" type="Texture" id=3]
[ext_resource path="res://Objects/Visuals/sprites/supercharge_6.png" type="Texture" id=4]
[ext_resource path="res://Objects/Visuals/sprites/supercharge_3.png" type="Texture" id=5]
[ext_resource path="res://Objects/Visuals/sprites/supercharge_7.png" type="Texture" id=6]
[ext_resource path="res://Objects/Visuals/sprites/supercharge_8.png" type="Texture" id=7]
[ext_resource path="res://Objects/Visuals/sprites/supercharge_5.png" type="Texture" id=8]
[ext_resource path="res://Objects/Visuals/sprites/supercharge_1.png" type="Texture" id=9]
[ext_resource path="res://Objects/Visuals/sprites/supercharge_2.png" type="Texture" id=10]
[ext_resource path="res://Objects/Visuals/sprites/supercharge_0.png" type="Texture" id=11]
[ext_resource path="res://Objects/Visuals/obj_tauntafterimage.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[node name="obj_tauntafterimage" type="Node2D" groups=["obj_tauntafterimage"]]
script = ExtResource( 12 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="AlphaOffTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AlphaOnTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="ScreenVisibility" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -50, -50, 100, 100 )

[node name="VisibilityTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="AlphaOffTimer" to="." method="_on_AlphaOffTimer_timeout"]
[connection signal="timeout" from="AlphaOnTimer" to="." method="_on_AlphaOnTimer_timeout"]
[connection signal="timeout" from="VisibilityTimer" to="." method="_on_VisibilityTimer_timeout"]
